--- a/Code/R/Assays.Rmd
+++ b/Code/R/Assays.Rmd
@@ -1,46 +1,166 @@
----
-title: "Assays"
-output: html_document
----
+
 
 ```{r}
 library(tidyverse)
-
-file_path= "../../Data/Compiled/DITNC1_LDH_nomix.csv"
+file_path= "../../Data/Compiled/SVG_LDH_ALL.csv"
 df <- read.csv(file_path)
-
 # replace blanks with 0 ug/ml and split the treatment into numbers and units
 df <- 
   df %>% 
   mutate(treatment = str_replace(treatment, "Blank", "0 ug/ml"))  %>% 
   separate(treatment, into=c("treatment", "units"), sep=" ") %>% 
-  mutate(treatment = as.numeric(treatment))
+  mutate(treatment = as.numeric(treatment)) %>% 
+  unite(group, condition, exposure_time, sep="_")
 
+# Scale all the values to the blank(treatment = 0) in every condition at every exposure time for every compound
+scaling_lst <- 
+  df %>% 
+  unite(group, compound, group, sep=",") %>% 
+  split(.$group)
+
+
+df_scaled <- 
+  lapply(names(scaling_lst), function(x){
+    blank_mean <- 
+      scaling_lst[[x]] %>% 
+      filter(group == x, treatment ==0) %>% 
+      select(response) %>% 
+      pull %>% 
+      mean
+    
+    scaling_lst[[x]] %>% 
+      mutate(response = response / blank_mean)
+  }) %>% 
+  bind_rows() %>% 
+  separate(group, into=c("compound", "group"), sep=",")
+
+
+#Plot the linear regression for DEP
 
 df %>%
   filter(compound=="DEP") %>%
-  unite(group, condition, exposure_time, sep="_" ) %>% 
-  ggplot(aes(x=treatment, y=response, group=group)) +
-  geom_jitter(aes(color=group), width=0.3, alpha= 0.5) +
-  stat_smooth(aes(color=group), method="lm", se=FALSE)
+  mutate(group = factor(group, levels = c("Normoxia_24 Hours", "Hypoxia_24 Hours",
+                                            "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>% 
+  ggplot(mapping=aes(x=treatment, y=response, color=group)) +
+  geom_jitter(width=0.3, alpha= 0.5) +
+  stat_smooth(method="lm", se=FALSE) +
+  labs(title= "DEP - LDH for Human Astroglial Cells (SVGp12)",
+       x="Treatment (μg/ml)", y="LDH (Cell Leakage)", 
+       color="Condition_Exposure Time")
+ggsave("../../Graphs/SVG/SVG_DEP_LDH_NS.png", device = "png", type = "cairo", width=6)
 
-df_alt <-
-  df %>% 
-  mutate(normoxia = condition == "Normoxia") %>% 
-  mutate(hypoxia = condition == "Hypoxia") %>% 
-  select(-condition)
+#Plot the linear regression for Ox66
+df %>%
+  filter(compound=="Ox66") %>%
+  mutate(group = factor(group, levels = c("Normoxia_24 Hours", "Hypoxia_24 Hours",
+                                          "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>% 
+  ggplot(mapping=aes(x=treatment, y=response, color=group), width=18) +
+  geom_jitter(width=0.3, alpha= 0.5) +
+  stat_smooth(method="lm", se=FALSE) +
+  labs(title= "Ox66 - LDH for Human Astroglial Cells (SVGp12)",
+       x="Treatment (μg/ml)", y="LDH (Cell Leakage)", 
+       color="Condition_Exposure Time")
 
-lnr_mdl <-
-  df %>% 
-  filter(compound=="DEP", exposure_time=="48 Hours") %>% 
-  lm(data=., response~(treatment*condition))
+ggsave("../../Graphs/SVG/SVG_Ox66_LDH_NS.png", device = "png", type = "cairo", width=6)
+```
 
-lnr_mdl2 <-
-  df_alt %>% 
-  filter(compound == "DEP", exposure_time == "48 Hours") %>% 
-  lm(data=., response~treatment + normoxia + hypoxia)
+```{r}
+find_mdl_coefficient <- function(x,y){
+  coef(summary(lm(y~x)))[2,1]
+}
+find_mdl_coefficient_stderr <- function(x,y){
+  lin_mod <- lm(y~x)
+  std_err <- coef(summary(lin_mod))[2,2]
+  df <- length(residuals(lin_mod))
+  crit_t <- abs(qt(0.05/2, df))
+  (crit_t * std_err)
+}
 
-summary(lnr_mdl)
+gg_color_hue <- function(n) {
+hues = seq(15, 375, length = n + 1)
+hcl(h = hues, l = 65, c = 100)[1:n]
+}
 
+df_slopes <- 
+  df_scaled %>% 
+  group_by(compound, group) %>% 
+  summarise(slope = find_mdl_coefficient(treatment, response),
+            slope_err = find_mdl_coefficient_stderr(treatment,response)) %>% 
+  mutate(slope_min = slope-slope_err, slope_max=slope+slope_err) 
+  
+df_slopes_dep <-
+  df_slopes %>% 
+  filter(compound=="DEP") %>% 
+  mutate(group = factor(group, levels = c("Normoxia_24 Hours", "Hypoxia_24 Hours",
+                                            "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>% 
+  arrange(group)
+
+ggsave("../../Graphs/SVG/SVG_DEP_LDH_CE.png", device = "png", type = "cairo", height=3)
+
+
+
+color_hues <- gg_color_hue(nrow(df_slopes_dep))
+x_lines <- c(rbind(df_slopes_dep$slope_min, df_slopes_dep$slope_max))
+y_lines <- rep(seq_len(nrow(df_slopes_dep))/2, each=2)
+x_dots <- rep(df_slopes_dep$slope, each=2)
+group <- rep(df_slopes_dep$group, each = 2)
+df_lines <- 
+  data.frame(x=x_lines, y=y_lines, group=group) 
+  
+ggplot(data=df_lines, mapping=aes(x=x_lines, y=y_lines, color=group)) + 
+  geom_line() + 
+  geom_point(x=x_dots, color="black") +
+  labs(x="Regression Slopes 95% Confidence Intervals", y="", color="Condition_Exposure Time",
+       title="Slope Confidence Intervals for SVGp12 dosed with DEP (LDH)") +
+  theme_bw() +
+  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank(),
+        panel.grid.major = element_blank(), panel.grid.minor = element_blank()) 
+
+
+
+
+
+lnr_mdl.dep.normoxia.24 <- 
+  df_scaled %>%
+  filter(compound=="DEP", group=="Normoxia_24 Hours") %>% 
+  lm(data=., response~treatment)
+
+slope.normoxia.24 <- coef(summary(lnr_mdl.dep.normoxia.24))[2,1]
+stderr.normoxia.24 <- coef(summary(lnr_mdl.dep.normoxia.24))[2,2]
+
+lnr_mdl.dep.hypoxia.24 <- 
+  df_scaled %>%
+  filter(compound=="DEP", group=="Hypoxia_24 Hours") %>% 
+  group_by(treatment) %>% 
+  summarise(response = mean(response)) %>% 
+  lm(data=., response~treatment)
+
+summary(lnr_mdl.dep.normoxia.24)
+```
+
+```{r}
+tail <- abs(qt(0.01/2, 190)) * stderr.normoxia.24
+summary(lnr_mdl.dep.normoxia.24)
+sd(resids)
+(slope.normoxia.24-tail) < slope.hypoxia.24 & slope.hypoxia.24 < (slope.normoxia.24+tail)
+slope.hypoxia.24
+ggplot(height=0.02) + 
+  ylim(0,0.025) +
+  geom_segment(aes(x=(slope.normoxia.24-tail), xend=slope.normoxia.24+tail), y=0.01,yend=0.01) +
+  geom_point(aes(x=slope.normoxia.24, y=0.01)) + 
+  geom_point(aes(x=slope.hypoxia.24, y=0.02))
+```
+
+```{r}
+
+df_scaled_witherr <- df_scaled %>%
+  filter(compound=="Ox66", group=="Hypoxia_48 Hours") %>% 
+  group_by(treatment) %>% 
+  summarise(stderr_ = sd(response)/(sqrt(length(response))), response= mean(response)) 
+
+
+ggplot(data=df_scaled_witherr, mapping=aes(x=treatment, y=response)) +
+  geom_point() +
+  geom_errorbar(aes(ymin=response-stderr_, ymax=response+stderr_))
 ```
 
