--- a/Code/R/Assays.Rmd
+++ b/Code/R/Assays.Rmd
@@ -7,10 +7,14 @@ df <- read.csv(file_path)
 # replace blanks with 0 ug/ml and split the treatment into numbers and units
 df <- 
   df %>% 
-  mutate(treatment = str_replace(treatment, "Blank", "0 ug/ml"))  %>% 
+  mutate(treatment = str_replace(treatment, "Blank", "0 ug/ml"),
+         treatment = str_replace(treatment, "20 ug/ml \\+ 50 ppm", "70 ug/ml"),
+         treatment = str_replace(treatment, "50 ug/ml \\+ 100 ppm", "150 ug/ml"),
+         treatment = str_replace(treatment, "100 ug/ml \\+ 200 ppm", "300 ug/ml")) %>% 
   separate(treatment, into=c("treatment", "units"), sep=" ") %>% 
   mutate(treatment = as.numeric(treatment)) %>% 
   unite(group, condition, exposure_time, sep="_")
+
 
 # Scale all the values to the blank(treatment = 0) in every condition at every exposure time for every compound
 scaling_lst <- 
@@ -34,18 +38,37 @@ df_scaled <-
   bind_rows() %>% 
   separate(group, into=c("compound", "group"), sep=",")
 
+plot_and_save <- function(cmpnd, assay){
+  title <- paste(cmpnd, " - ", assay, " for Human Astroglial Cells (SVGp12)", sep="")
+  file_path <- paste("../../Graphs/SVG/SVG_", cmpnd, "_", assay, "N_NS.png", sep="")
+  df %>%
+  filter(compound==cmpnd) %>%
+  mutate(group = factor(group, levels = c("Normoxia_24 Hours", "Hypoxia_24 Hours",
+                                            "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>% 
+  arrange(group) %>% 
+  ggplot(mapping=aes(x=treatment, y=response, color=group)) +
+  geom_jitter(width=0.3, alpha= 0.5) +
+  stat_smooth(method="lm", se=FALSE) +
+  labs(title= title,
+       x="Treatment (μg/ml)", y="LDH (Cell Leakage)", 
+       color="Condition_Exposure Time")
+  
+ggsave(file_path, device = "png", type = "cairo", width=10)
+}
 
 #Plot the linear regression for DEP
+plot_and_save("DEP", "LDH")
 
 df %>%
   filter(compound=="DEP") %>%
   mutate(group = factor(group, levels = c("Normoxia_24 Hours", "Hypoxia_24 Hours",
-                                            "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>% 
+                                            "Normoxia_48 Hours", "Hypoxia_48 Hours"))) %>%
+  arrange(group) %>% 
   ggplot(mapping=aes(x=treatment, y=response, color=group)) +
   geom_jitter(width=0.3, alpha= 0.5) +
   stat_smooth(method="lm", se=FALSE) +
   labs(title= "DEP - LDH for Human Astroglial Cells (SVGp12)",
-       x="Treatment (μg/ml)", y="LDH (Cell Leakage)", 
+       x="Treatment (μg/ml)", y="LDH (Cell Leakage)",
        color="Condition_Exposure Time")
 ggsave("../../Graphs/SVG/SVG_DEP_LDH_NS.png", device = "png", type = "cairo", width=6)
 
@@ -62,6 +85,14 @@ df %>%
        color="Condition_Exposure Time")
 
 ggsave("../../Graphs/SVG/SVG_Ox66_LDH_NS.png", device = "png", type = "cairo", width=6)
+
+#Plot the linear regression for 
+```
+
+```{r}
+view(df %>% 
+  mutate(treatment = str_replace(treatment, "Blank", "0 ug/ml")) %>% 
+  mutate(treatment = str_replace(treatment, "20 ug/ml \\+ 50 ppm", "70 ug/ml")))
 ```
 
 ```{r}
