R - Added barplot functionality

--- a/Code/R/Assays.Rmd
+++ b/Code/R/Assays.Rmd
@@ -1,3 +1,217 @@
+```{r}
+games.howell <- function(grp, obs) {
+  
+  #Create combinations
+  combs <- combn(unique(grp), 2)
+  
+  # Statistics that will be used throughout the calculations:
+  # n = sample size of each group
+  # groups = number of groups in data
+  # Mean = means of each group sample
+  # std = variance of each group sample
+  n <- tapply(obs, grp, length)
+  groups <- length(tapply(obs, grp, length))
+  Mean <- tapply(obs, grp, mean)
+  std <- tapply(obs, grp, var)
+  
+  statistics <- lapply(1:ncol(combs), function(x) {
+    
+    mean.diff <- Mean[combs[2,x]] - Mean[combs[1,x]]
+    
+    #t-values
+    t <- abs(Mean[combs[1,x]] - Mean[combs[2,x]]) / sqrt((std[combs[1,x]] / n[combs[1,x]]) + (std[combs[2,x]] / n[combs[2,x]]))
+    
+    # Degrees of Freedom
+    df <- (std[combs[1,x]] / n[combs[1,x]] + std[combs[2,x]] / n[combs[2,x]])^2 / # Numerator Degrees of Freedom
+            ((std[combs[1,x]] / n[combs[1,x]])^2 / (n[combs[1,x]] - 1) + # Part 1 of Denominator Degrees of Freedom 
+              (std[combs[2,x]] / n[combs[2,x]])^2 / (n[combs[2,x]] - 1)) # Part 2 of Denominator Degrees of Freedom
+    
+    #p-values
+    p <- ptukey(t * sqrt(2), groups, df, lower.tail = FALSE)
+    
+    # Sigma standard error
+    se <- sqrt(0.5 * (std[combs[1,x]] / n[combs[1,x]] + std[combs[2,x]] / n[combs[2,x]]))
+          
+    # Upper Confidence Limit
+    upper.conf <- lapply(1:ncol(combs), function(x) {
+      mean.diff + qtukey(p = 0.95, nmeans = groups, df = df) * se
+    })[[1]]
+    
+    # Lower Confidence Limit
+    lower.conf <- lapply(1:ncol(combs), function(x) {
+      mean.diff - qtukey(p = 0.95, nmeans = groups, df = df) * se
+    })[[1]]
+    
+    # Group Combinations
+    grp.comb <- paste(combs[1,x], ':', combs[2,x])
+    
+    # Collect all statistics into list
+    stats <- list(grp.comb, mean.diff, se, t, df, p, upper.conf, lower.conf)
+  })
+  
+  # Unlist statistics collected earlier
+  stats.unlisted <- lapply(statistics, function(x) {
+    unlist(x)
+  })
+  
+  # Create dataframe from flattened list
+  results <- data.frame(matrix(unlist(stats.unlisted), nrow = length(stats.unlisted), byrow=TRUE))
+  
+  # Select columns set as factors that should be numeric and change with as.numeric
+  results[c(2, 3:ncol(results))] <- round(as.numeric(as.matrix(results[c(2, 3:ncol(results))])), digits = 3)
+  
+  # Rename data frame columns
+  colnames(results) <- c('groups', 'Mean Difference', 'Standard Error', 't', 'df', 'p', 'upper limit', 'lower limit')
+
+  return(results)
+}
+```
+
+```{r}
+library(tidyverse)
+library(gridExtra)
+
+# Load the data and convert the blank and mixed treatments to a uniform format
+file_path= "../../Data/Compiled/SVG_LDH_ALL.csv"
+df <- read.csv(file_path)
+df <- 
+  df %>% 
+  mutate(treatment = str_replace(treatment, "Blank", "0 ug/ml"),
+         treatment = str_replace(treatment, "20 ug/ml \\+ 50 ppm", "70 ug/ml"),
+         treatment = str_replace(treatment, "50 ug/ml \\+ 100 ppm", "150 ug/ml"),
+         treatment = str_replace(treatment, "100 ug/ml \\+ 200 ppm", "300 ug/ml")) %>% 
+  separate(treatment, into=c("treatment", "units"), sep=" ") %>% 
+  mutate(treatment = as.numeric(treatment)) %>% 
+  select(-units) %>% 
+  unite(group, condition, exposure_time, sep="_")
+
+# Normalize all the values so that the mean of the 0 treatment is 1 and the sd is 1
+
+scaling_lst <- 
+  df %>% 
+  unite(group, compound, group, sep=",") %>% 
+  split(.$group)
+
+
+df_scaled <- 
+  lapply(names(scaling_lst), function(x){
+    scale_mean <- 
+      scaling_lst[[x]] %>% 
+      filter(group == x, treatment == 0) %>% 
+      select(response) %>% 
+      pull %>% 
+      mean
+    
+    scaling_lst[[x]] %>% 
+      mutate(response = ((response -scale_mean)/sd(response)) + 1)
+  }) %>% 
+  bind_rows() %>% 
+  separate(group, into=c("compound", "group"), sep=",")
+
+
+
+
+```
+
+
+```{r}
+
+#Barplot galore. Print barplots by group and create significance brackets using the games-howell test
+
+df_means <-
+  df_scaled %>% 
+  filter(compound == "DEP") %>% 
+  mutate(treatment = factor(treatment, levels=c("0", "20","50", "100"))) %>% 
+  arrange(group, treatment) %>% 
+  group_by(group, treatment) %>% 
+  summarise(err = sd(response)/sqrt(length(response)), response=mean(response)) %>% 
+  ungroup %>% 
+  mutate(group = factor(group))
+
+
+df_means$y_err_max <- df_means$response + df_means$err
+df_means$y_err_min <- df_means$response - df_means$err
+max_height = max(df_means$y_err_max)
+unit <- max_height / 25
+bar_width = 0.5/3
+
+groups <- unique(df_means$group)
+treatments <- unique(df_means$treatment)
+
+plt <- ggplot(data=df_means, mapping = aes(y=response, x=group, fill=treatment)) + 
+    geom_bar(position="dodge", stat="identity", width=0.5) + 
+    geom_errorbar(aes(ymin=y_err_min, ymax=y_err_max), width=.2, position=position_dodge(.5)) + 
+    theme_bw(base_size = 11) + 
+    labs(x="", y="LDH (Cell Damage)", fill = "Treatment (μg/ml)") 
+
+for (i in 1:length(groups)){
+  grp <- as.character(groups[i])
+  
+  df_group <- df_scaled %>% 
+    filter(compound == "DEP", group == grp)
+  
+  df_group_means <- df_means %>% 
+    filter(group == grp)
+  
+  howell_tst <- games.howell(as.character(df_group$treatment), df_group$response)
+  view(howell_tst)
+  
+  group_starting_x <- i - (length(treatments) * bar_width)/2
+  x_values = list()
+  y_offset <- 0
+  highest_treatment_in_group <- max(df_group_means$y_err_max)
+  for (j in 1:(length(treatments) -1)){
+    for (k in (j + 1):length(treatments)){
+      
+      max_treatment_height <-
+        df_group_means %>% 
+        filter(treatment == treatments[j] | treatment == treatments[k]) %>% 
+        select(y_err_max) %>% 
+        pull %>% 
+        max
+      
+      print(max_treatment_height)
+      x_values <- c(group_starting_x + j*bar_width - bar_width/2 + bar_width/10, 
+                    group_starting_x + j*bar_width - bar_width/2 + bar_width/10, 
+                    group_starting_x + k*bar_width - bar_width/2 - bar_width/10, 
+                    group_starting_x + k*bar_width - bar_width/2 - bar_width/10)
+      
+      
+      if (k-j ==1) {
+        y_pos <- max_treatment_height + 2 * unit
+      } else {
+        y_pos <- highest_treatment_in_group + 2*unit*(j - 1 + k - 1) 
+      }
+      
+      y_values <- c(y_pos-unit, y_pos, y_pos, y_pos-unit)
+      x_text <- (group_starting_x + j*bar_width - bar_width/2 + bar_width/10 + group_starting_x + k*bar_width - bar_width/2 - bar_width/10)/2
+      y_text <- y_pos + 0.75*unit
+      df_line <- data.frame(x=x_values,y=y_values, treatment = rep(c('0'), 2))
+      treatments_conc <- paste(treatments[j], treatments[k], sep=" : ")
+      p_val <- 
+        howell_tst %>% 
+        filter(groups == treatments_conc) %>% 
+        select(p) %>% 
+        pull 
+      
+      # A length check since R seems to insist that some of the p values be stored as numeric(0), producing a NULL as the output of the if statement. YAY R!
+      if (length(p_val) != 0){
+        if (p_val < 0.05) {
+           lbl <- "*"
+        } else {
+          lbl <- "n.s."
+        }
+      } else {
+        lbl <- "n.s."
+      }
+    
+      plt <- plt + geom_line(data=df_line, aes(x=x,y=y)) + annotate("text", label=lbl, x=x_text, y=y_text, color="black", size=3)
+    }
+  }
+}
+
+print(plt)
+```
 
 
 ```{r}
@@ -17,27 +231,7 @@ df <-
   unite(group, condition, exposure_time, sep="_")
 
 
-# Scale all the values to the blank(treatment = 0) in every condition at every exposure time for every compound
-scaling_lst <- 
-  df %>% 
-  unite(group, compound, group, sep=",") %>% 
-  split(.$group)
 
-
-df_scaled <- 
-  lapply(names(scaling_lst), function(x){
-    scale_mean <- 
-      scaling_lst[[x]] %>% 
-      filter(group == x, treatment == 0) %>% 
-      select(response) %>% 
-      pull %>% 
-      mean
-    
-    scaling_lst[[x]] %>% 
-      mutate(response = ((response -scale_mean)/sd(response)))
-  }) %>% 
-  bind_rows() %>% 
-  separate(group, into=c("compound", "group"), sep=",")
 
 plot_and_save <- function(cmpnd, assay){
   title <- paste(cmpnd, " - ", assay, " for Human Astroglial Cells (SVGp12)", sep="")
